updates by @naszam

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -117,9 +117,9 @@ AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart
 \end{itemize}
  Alice or the Issuers can at any time update the AntReview details (issuers, paper, requirements, deadline) with the function \emph{changeAntReview()} and add/remove the Approver with the functions \emph{addApprover()} and \emph{removeApprover()}.
  Anters (members of the Ants-Review Community), can contribute to Alice's AntReview with the function \emph{contribute()}, by specifying the amount of ANTS they are willing to send.
- Bob (peer-reviewer) can download the files relative to Alice's paper and requirements by leveraging on the content-addressing feature of IPFS, that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer-review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer-review on IPFS, whose hash is stored into Ethereum blockchain as PoE.
+ Bob (peer-reviewer) can download the files relative to Alice's paper and requirements by leveraging on the content-addressing feature of IPFS, that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer-review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer-review on IPFS, whose hash is stored into Ethereum blockchain as PoE. He can update the peer-review with the function \emph{updateReview()} by uploading the new version on IPFS.
 The Approver can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
-If Alice's AntReview does not receive any peer-review and the deadline expires, Anters can get a refund with the function \emph{refund()} for their contributions. In order to avoid residual balance, Alice can withdraw ANTS from her AntReview's balance, if the deadline expires, with the function \emph{withdrawAntReview()}, and the contract will transfer the amount specified to Alice and update the balance.
+If Alice's AntReview does not receive any peer-review and the deadline expires, Anters can get a refund with the function \emph{refund()} for their contributions. In order to avoid residual balance, Alice can withdraw ANTS from the AntReview's balance, if the deadline expires, with the function \emph{withdrawAntReview()}, and the contract will transfer the amount specified to Alice and update the balance.
 
 Access management of the Ants-Review protocol is defined and controlled by AntsReviewRoles (see Figure \ref{fig:contracts} (\textbf{b})), implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[10]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.} that it's used to define the Issuer and Peer-Reviewer Roles.
 \newline AntsReviewRoles also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is granted to the Owner of the smart contracts, to pause (or unpause) all the functions in case of a security emergency, such as an attack to the smart contracts.
