updates by @naszam

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -131,7 +131,7 @@ The anonymity of an agent in the system is achieved in two ways: via pseudo-anon
 
 \paragraph{Pseudo-anonymity.}EOAs in Ethereum are controlled via private keys. However, the privacy is limited by the fact that both the blockchain and its transactions are public.  Therefore, the details of the transactions are visible to anyone by browsing a block explorer (such as Etherscan) and are subject to data mining that could extract value and identify users in the blockchain.
 \paragraph{Private transactions.}AZTEC Protocol  was conceived to enable privacy on public blockchains. It uses Zero-Knowledge Succinct Non-Interactive Argument of Knowledge (ZK-SNARKs)\cite{ZKSNARKs} and homomorphic encryption\footnote[11]{\emph{Homomorphic Encryption}.\textsc{URL:}https://vitalik.ca/general/2020/07/20/homomorphic.html.} to validate encrypted transactions.
-\newline ZK-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier.ZK-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents (Alice & Bob).
+\newline ZK-SNARKs are zero-knowledge proofs that require no interaction between prover and verifier. ZK-SNARKs are used inside the Ants-Review protocol via the zkANTS token to allow private transactions between the agents.
 \newline Future developments will allow to leverage on Permutations over Lagrange-bases for Oecumenical Noninteractive arguments of Knowledge (PLONK) \cite{PLONK}proofs, a universal ZK-SNARK construction that reduces gas costs and improves scalability.
 
 \subsubsection{Tokenomics}
@@ -144,10 +144,9 @@ Ants-Review integrates a few \emph{ERC20}\footnote[12]{\emph{EIP 20}.\textsc{URL
 \section{Discussions}
 We have described how Ants-Review protocol can solve the limitations of the current peer-review system (see 2.1). In particular we showed how the lack of recognition, the lack of transparency, fraud and misconduct can be solved via the Ants-Review Protocol (see § AntsReview in 3.2); social and cognitive biases via anonymity granted by AZTEC Protocol (see § Privacy in 3.2); the slowness of the process, the need for evaluation of the peer-reviews themselves and the need for increasing the number of reviewers by the creation of the community of Anters.
 \subsection{Future developments}
-The Ants-Review Protocol will make the following integrations.
-An interesting aspect of the protocol is the double function of an AntReview that is a the same time a bounty and a pool to stake ERC20 tokens. Therefore, the duration of peer-reviews consents to connect the protocol to De-Fi services, such as Dai\footnote[14]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}, Chai\footnote[15]{\emph{Chai}.\textsc{URL:}https://chai.money.}, with the possibility of accruing interest over time via MakerDAO DSR (Dai Saving Rate)\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[17]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few. 
-In particular, we are considering to implement another ERC20 token, called \emph{Hive}, symbol \emph{HIVE}, a wrapper of ANTS that represents the accrued interest of the Anters' stake into AntReviews.
-This token doesn't need to be locked in the network and it can be traded, sold, or held as the Anter desires.
+An interesting aspect of the protocol is the double function of an AntReview that is a the same time a bounty and a liquidity pool to stake ERC20 tokens like Dai\footnote[14]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.} . Therefore, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility of accruing interest over time via MakerDAO DSR (Dai Saving Rate)\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[17]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few. 
+In particular, we are considering to implement another ERC20 token, a pool token that represents the accrued interest of the Anters' stake into AntReviews.
+This token doesn't need to be locked in the protocol and it can be traded, sold, or held as the Anter desires.
 A Decentralized Autonomous Organization (DAO) could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
 \newline Finally, another concept under investigation is Quadratic Funding \cite{LiberalRadicalism}, used by \emph{Gitcoin} to match donations for grants. This will allow to incentives prolific peer-peviewers and research and improve the stability of the system together with ideally a reward system to rank the best peer-reviewers.
 
