--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -144,7 +144,7 @@ Ants-Review integrates a few \emph{ERC20}\footnote[12]{\emph{EIP 20}.\textsc{URL
 \section{Discussions}
 We have described how Ants-Review protocol can solve the limitations of the current peer-review system (see 2.1). In particular we showed how the lack of recognition, the lack of transparency, fraud and misconduct can be solved via the Ants-Review Protocol (see § AntsReview in 3.2); social and cognitive biases via anonymity granted by AZTEC Protocol (see § Privacy in 3.2); the slowness of the process, the need for evaluation of the peer-reviews themselves and the need for increasing the number of reviewers by the creation of the community of Anters.
 \subsection{Future developments}
-An interesting aspect of the protocol is the double function of an AntReview that is a the same time a bounty and a liquidity pool to stake ERC20 tokens like Dai\footnote[14]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.} . Therefore, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility of accruing interest over time via MakerDAO DSR (Dai Saving Rate)\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[17]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few. 
+An interesting aspect of the protocol is the double function of an AntReview that is a the same time a bounty and a pool to stake ERC20 tokens like Dai\footnote[14]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.} . Therefore, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility of accruing interest over time via MakerDAO DSR (Dai Saving Rate)\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.} or Compound\footnote[17]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few. 
 In particular, we are considering to implement another ERC20 token, a pool token that represents the accrued interest of the Anters' stake into AntReviews.
 This token doesn't need to be locked in the protocol and it can be traded, sold, or held as the Anter desires.
 A Decentralized Autonomous Organization (DAO) could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
