update discussions by @naszam

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -148,7 +148,7 @@ An interesting aspect of the protocol is the double function of an AntReview tha
 In particular, we are considering to implement another ERC20 token, a pool token that represents the accrued interest of the Anters' stake into AntReviews.
 This token doesn't need to be locked in the protocol and it can be traded, sold, or held as the Anter desires.
 A Decentralized Autonomous Organization (DAO) could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
-\newline Finally, another concept under investigation is Quadratic Funding \cite{LiberalRadicalism}, used by \emph{Gitcoin} to match donations for grants. This will allow to incentives prolific peer-peviewers and research and improve the stability of the system together with ideally a reward system to rank the best peer-reviewers.
+\newline Finally, a protocol upgrade under investigation would allow Anters to validate peer-reviews via an upvote/downvote system inspired by Discover \footnote[18]{\emph{Discover.sol}.\textsc{URL:}https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.} (Status \footnote[19]{\emph{Status}.\textsc{URL:}https://status.im/.}), that automatically will pay out the reward to peer-reviewers based on the votes associated with their peer-reviews.
 
 \subsection{A new community-driven standard?}
 As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value.
