--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -147,7 +147,7 @@ We have described how Ants-Review protocol can solve the limitations of the curr
 An interesting aspect of the protocol is the double function of an AntReview respectively as a bounty and as a pool to stake ERC20 tokens like Dai\footnote[14]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}. Moreover, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility for the community to accrue interest over time via MakerDAO Dai Saving Rate (Pot\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.}) or Compound\footnote[17]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few.
 Therefore, an ERC20 \emph{pool token} would be automatically released by the protocol, representing the accrued interest on the Anters' stake over time that can be traded, sold, or held as the Anter desires.
 A Decentralized Autonomous Organization (DAO) could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
-\newline Finally, a protocol upgrade inspired by Discover \footnote[18]{\emph{Discover.sol}.\textsc{URL:}https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.} (Status \footnote[19]{\emph{Status}.\textsc{URL:}https://status.im/.}) and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
+\newline Finally, a protocol upgrade inspired by Discover \footnote[18]{\emph{Discover.sol}.\textsc{URL:}https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.} (Status \footnote[19]{\emph{Status}.\textsc{URL:}https://status.im/.}) and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
 
 \subsection{A new community-driven standard?}
 As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value.
