update fig. 1 + paper

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -89,7 +89,7 @@ Thus, the system acts also as a reputation builder.
 
 \begin{figure}
 \centering
-\includegraphics[scale=0.28]{Ants-Review}
+\includegraphics[scale=0.28]{AntsReview}
 \small{
 \caption{Exagones represent the protocol's smart contracts. Ellipse represents the smart contract inherited by AntsReview. Clouds represent integrations into the protocol. Rectangles represent smart contracts' libraries.
 \textbf{a} Core contract of the protocol implementing a bounty system with the functions listed.
