Discussion: changes on 'A new standard'

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -152,7 +152,7 @@ A Decentralized Autonomous Organization (DAO) could be formed in the future to a
 \subsection{A new community-driven standard?}
 As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value (\emph{ibidem}).
 In our proposal we decoupled the peer-review process from the publishers giving it back to the scientific community and applying concepts from mechanism design. We foresee that the future will evolve towards community-organized peer reviews: peer reviews will be more and more independent from publishers, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
-\newline Enlarging the pool of reviewers and accelerating the whole process might make Peer reviews requires a standard: building smart-contracts for peer-reviews might set a first step in this direction and our work seems promising. We hope that soon the value of peer review as 'academic capital' will be recognized by research funders and hiring committees.
+\newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process might require a new standard for peer reviews: for example some aspects might be taken over by AI assistants leaving to the reviewers the sole task of evaluating the content of a paper (such as \emph{AIRA} \cite{}). Building smart-contracts for peer-reviews might set a first step in this direction and our work seems promising. We hope that soon the value of peer review as 'academic capital' will be recognized by research funders and hiring committees.
 
 \section{Conclusion}
 In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We've shown how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
